--- a/extras/moreinfo.html
+++ b/extras/moreinfo.html
@@ -90,23 +90,26 @@
     </form>
   </div>
 </nav>
-
 <div class="container">
-  <div class="col-sm-6 text-left"> 
-        <h1>Bored? Ashamed? You've come to the right place!</h1>
-        <p>Below are a couple of links to games that have been copied and altered/cheated to either be unblocked(Dinosaur Game) or super easy to play(2048). Take a break from studying, but don't take too long of a break!</p>
-        </br>
-        <ul>
-          <li><a href="dino.html">Dinosaur Game</a></li>
-          <li><a href="2048.html">Hacked 2048</a></li>
-        </ul>
+  <div class="col-sm-12 text-left"> 
+        <h1>Welcome</h1>
+        <p>Hi there! This website was built to help others study better. It includes flashcrads full of content and many more things to come! (This website has only been in progress for a week). I soon hope to add homework reminders, more study tool, announcements and much, much more. This website is made with HTML, CSS and Javascript using Boostrap and Jquery Libraries. Finally this will not always be up to date as it is a third party website. </p>
+        <p>The favicon(little icon on the tab) and the tab title will change when focused on another tab so it is hidden. You can test  this by looking at the tab icon and title and then switching on and off the website.</p>
   </div>
-  
-  <div class="col-sm-6 text-center" style="float:right;"> 
-    <img src="win.png" style="width:50%;float:right;"></img>
+  <div class="col-sm-12 text-center"> 
+        <h1>Changelog</h1>
+        <p>Publishing Date: Not Specified</p>
+        <h3>Alpha</h3>
+        <p>v0.3 Bored/Games page added</p>
+        <p>v0.2.4.1 More and Less function added to flashcards</p>
+        <p>v0.2.4 More info Added</p>
+        <p>v0.2.3.1 Favicon and Title</p>
+        <p>v0.2.3 Styling Upgrades</p>
+        <p>v0.2 Flashcards Added</p>
+        <p>v0.1 Intial Release</p>
   </div>
 </div>
-
-
+<footer class="container-fluid text-center" style="margin-bottom:0;position:relative">
+  <p>© 2019 Lucas Industries</p>  
+</footer>
 </body>
-</html>
