--- a/extras/questions.html
+++ b/extras/questions.html
@@ -90,23 +90,11 @@
     </form>
   </div>
 </nav>
-
-<div class="container">
-  <div class="col-sm-6 text-left"> 
-        <h1>Bored? Ashamed? You've come to the right place!</h1>
-        <p>Below are a couple of links to games that have been copied and altered/cheated to either be unblocked(Dinosaur Game) or super easy to play(2048). Take a break from studying, but don't take too long of a break!</p>
-        </br>
-        <ul>
-          <li><a href="dino.html">Dinosaur Game</a></li>
-          <li><a href="2048.html">Hacked 2048</a></li>
-        </ul>
-  </div>
-  
-  <div class="col-sm-6 text-center" style="float:right;"> 
-    <img src="win.png" style="width:50%;float:right;"></img>
-  </div>
-</div>
-
-
+<div class="full"> 
+      <h1>Questions? Contact:</h1>
+      <h1>lucas_chang@cais.org</h1>
+    </div>
+<footer class="container-fluid text-center" style="margin-top:100%;">
+  <p>© 2019 Lucas Industries</p>  
+</footer>
 </body>
-</html>
