--- a/extras/help.html
+++ b/extras/help.html
@@ -43,7 +43,6 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/New_Logo_AD.jpg" width=300 class="ad-image">
     </div>
   </div>
-  <div id="hider"><img width=100% src="background.png"></div>
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
   <img class="navbar-brand" src="https://lukaja21.github.io/Quizlit/favicon-32x32.png" alt="logo">
@@ -85,7 +84,7 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search Sets..." aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
