--- a/games/2048.html
+++ b/games/2048.html
@@ -3,7 +3,7 @@
 <html lang="en" manifest="cache.appcache" class="gr__nicholasegan_me"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <title>Quizlit: Study Longer. Study Harder.</title>
-  <link rel="icon" href="/favicon-32x32.png">
+  <link rel="icon" href="../favicon-32x32.png">
 
   <link href="./2048_files/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="http://nicholasegan.me/2048hack/favicon.ico">
@@ -31,10 +31,8 @@
 
   gtag('config', 'UA-141204680-1');
 </script>
-	<script src="/script.js">
-
-	</script>
 </head>
+
 <body data-gr-c-s-loaded="true">
   <div class="container">
     <div class="heading">
@@ -48,7 +46,7 @@
     <div class="above-game">
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
       </br>
-      <a class="restart-button">New Game</a><a href="/index.html">Home</a>
+      <a class="restart-button">New Game</a><a href="../index.html">Home</a>
     </div>
 
     <div class="game-container">
