--- a/games/dino.html
+++ b/games/dino.html
@@ -2552,7 +2552,7 @@
 
 <body id="t">
 	<p style="text-align:center">Their a few bugs in this version of the game, which may make it impossible not to die.</p>
-  <a href="/index.html" style="text-align:center;width:100%">Home</a>
+  <a href="../index.html" style="text-align:center;width:100%">Home</a>
 	<script>
 		window.fbAsyncInit = function() {
     FB.init({
