--- a/sets/watertest.html
+++ b/sets/watertest.html
@@ -135,7 +135,7 @@
             <h5 class="card-title text-muted text-uppercase text-center">Listed Vocabulary Words</h5>
             <hr>
             <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fas fa-circle"></i></span>Drink - Is Bad</li>
+              <li><span class="fa-li">  Drink - Is Bad</li>
               <li><span class="fa-li"><i class="fas fa-circle"></i></span>Food - Is Good</li>
             </ul>
             <button onclick="ExpandBlock('two')" class="btn btn-block btn-primary text-uppercase block-two-button">Expand</button>
