--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
     <div class="col-lg-4 col-sm-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Project  Four</a>
@@ -138,7 +138,7 @@
     </div>
     <div class="col-lg-4 col-sm-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Project Five</a>
@@ -149,7 +149,7 @@
     </div>
     <div class="col-lg-4 col-sm-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+        <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Project Six</a>
