Major Content Changes
-UI changes
-Added subject pages to list all sets
-Fixed certain bugs

--- a/extras/help.html
+++ b/extras/help.html
@@ -61,13 +61,13 @@
           Subjects
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">All</a>
+          <a class="dropdown-item" href="../subjects/all.html">All</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Humanities</a>
-          <a class="dropdown-item" href="#">Math</a>
-          <a class="dropdown-item" href="#">Science</a>
-          <a class="dropdown-item" href="#">Chinese</a>
-          <a class="dropdown-item" href="#">Other</a>
+          <a class="dropdown-item" href="../subjects/humanities.html">Humanities</a>
+          <a class="dropdown-item" href="../subjects/math.html">Math</a>
+          <a class="dropdown-item" href="../subjects/science.html">Science</a>
+          <a class="dropdown-item" href="../subjects/chinese.html">Chinese</a>
+          <a class="dropdown-item" href="../subjects/other.html">Other</a>
         </div>
       </li>
       <li class="nav-item">
