--- a/sets/science/watertest.html
+++ b/sets/science/watertest.html
@@ -13,6 +13,8 @@
   </script>
   <script src="../../scripts/script.js">
   </script>
+  <script src="../../scripts/sets.js">
+  </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141204680-1">
   </script>
@@ -84,10 +86,17 @@
         <a class="nav-link" href="../../games/bored.html">Bored</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search Sets..." aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+      <li class="nav-item dropdown" style="margin-left: -10%;">
+        <div class="dropdown">
+          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Search Sets
+          <span class="caret"></span></button>
+          <ul class="dropdown-menu set-search">
+            <input class="form-control" id="myInput" type="text" placeholder="Search..">
+          </ul>
+        </div>
+      </li>
+    </ul>
   </div>
 </nav>
 
@@ -166,9 +175,10 @@
 </footer>
 
 <script>
-  var cards = [['Food','Is Good'],['Drink','Is bad']]
-  card = 0
-  side = 1
+  var cards = GetSetCards("Water Test")
+  var card = 0
+  var side = 0
+  console.log(side)
   $( ".flashcard" ).click(function() {
     if (side === 0) {
       side = 1;
