--- a/extras/questions.html
+++ b/extras/questions.html
@@ -73,20 +73,20 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../extras/moreinfo.html">More Info</a>
+        <a class="nav-link" href="moreinfo.html">More Info</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../extras/questions.html">Questions</a>
+        <a class="nav-link" href="questions.html">Questions</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../extras/help.html">Help</a>
+        <a class="nav-link" href="help.html">Help</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="../games/bored.html">Bored</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-      <li class="nav-item dropdown" style="margin-left: -10%;">
+      <li class="nav-item dropdown">
         <div class="dropdown">
           <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Search Sets
           <span class="caret"></span></button>
