--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-      <li class="nav-item dropdown" style="margin-left: -10%;">
-        <div class="dropdown">
+      <li class="nav-item dropdown">
+        <div class="dropdown set-search-container">
           <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Search Sets
           <span class="caret"></span></button>
           <ul class="dropdown-menu set-search">
