--- a/subjects/all.html
+++ b/subjects/all.html
@@ -86,7 +86,7 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-      <li class="nav-item dropdown" style="margin-left: -10%;">
+      <li class="nav-item dropdown">
         <div class="dropdown">
           <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Search Sets
           <span class="caret"></span></button>
@@ -109,14 +109,4 @@
     </ul>
   </nav>
 </div>
-<script>
-$(document).ready(function(){
-  $("#myInput").on("keyup", function() {
-    var value = $(this).val().toLowerCase();
-    $(".dropdown-menu li").filter(function() {
-      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-    });
-  });
-});
-</script>
 </body>
