--- a/subjects/science.html
+++ b/subjects/science.html
@@ -86,7 +86,7 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-      <li class="nav-item dropdown" style="margin-left: -10%;">
+      <li class="nav-item dropdown">
         <div class="dropdown">
           <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Search Sets
           <span class="caret"></span></button>
