--- a/games/bored.html
+++ b/games/bored.html
@@ -106,7 +106,8 @@
         </br>
         <ul>
           <li><a href="dino.html">Dinosaur Game</a></li>
-          <li><a href="2048.html">Hacked 2048</a></li>
+          <li><a href="2048/2048.html">Hacked 2048</a></li>
+          <li><a href="cookieclicker/cookieclicker.html">Cookie Clicker</a></li>
         </ul>
   </div>
   
