--- a/extras/help.html
+++ b/extras/help.html
@@ -101,7 +101,9 @@
 <div class="container">
 	<div class="col-sm-6 text-left "> 
       <h1>Games and Hiding Stuff</h1>
-      <p>1. </p>
+      <h6>First Method:</h6>
+      <p>1. Ctrl-N to opena new window</p>
+      <p>2. Alt-Tab to switch between windows</p>
 	</div>
 </div>
 <footer class="container-fluid text-center" style="margin-bottom:0;float:bottom;">
