--- a/games/image_2048/2048.html
+++ b/games/image_2048/2048.html
@@ -213,18 +213,18 @@
 <iframe scrolling="no" frameborder="0" allowtransparency="true" src="./2048_files/widget_iframe.d753e00c3e838c1b2558149bd3f6ecb8.html" title="Twitter settings iframe" style="display: none;"></iframe>
 <script>
   function fortnite() {
-    $(".tile.tile-2 .tile-inner").css("background-image", "url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/19_2.png)")
-    $(".tile.tile-4 .tile-inner").css("background-image", "url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/21_3.png)")
-    $(".tile.tile-8 .tile-inner").css("background-image", "url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/24_3.png)")
-    $(".tile.tile-16 .tile-inner").css("background-image", "url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/21_4.png)")
-    $(".tile.tile-32 .tile-inner").css("background-image", "url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/20_5.png)")
-    $(".tile.tile-64 .tile-inner").css("background-image", "url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/31_3.png)")
-    $(".tile.tile-128 .tile-inner").css("background-image", "url(https://gamewith-en.akamaized.net/img/ae523955cce5588679b124c569957637.png)")
-    $(".tile.tile-256 .tile-inner").css("background-image", "url(https://gamewith-en.akamaized.net/img/42f4a279eb1862af3c07714ecbf2c3d6.jpg)")
-    $(".tile.tile-512 .tile-inner").css("background-image", "url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/1350_3.png)")
-    $(".tile.tile-1024 .tile-inner").css("background-image", "url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/1350_3.png)")
-    $(".tile.tile-2048 .tile-inner").css("background-image", "url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/2976_5.png)")
-    $(".tile.tile-super .tile-inner").css("background-image", "url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/18_5.png)")
+    $(".tile.tile-2 .tile-inner").css({"background-image":"url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/19_2.png)"})
+    $(".tile.tile-4 .tile-inner").css({"background-image":"url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/21_3.png}")
+    $(".tile.tile-8 .tile-inner").css({"background-image":"url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/24_3.png)"})
+    $(".tile.tile-16 .tile-inner").css({"background-image":"url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/21_4.png)"})
+    $(".tile.tile-32 .tile-inner").css({"background-image":"url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/20_5.png)"})
+    $(".tile.tile-64 .tile-inner").css({"background-image":"url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/31_3.png)"})
+    $(".tile.tile-128 .tile-inner").css({"background-image":"url(https://gamewith-en.akamaized.net/img/ae523955cce5588679b124c569957637.png)"})
+    $(".tile.tile-256 .tile-inner").css({"background-image":"url(https://gamewith-en.akamaized.net/img/42f4a279eb1862af3c07714ecbf2c3d6.jpg)"})
+    $(".tile.tile-512 .tile-inner").css({"background-image":"url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/1350_3.png)"})
+    $(".tile.tile-1024 .tile-inner").css({"background-image":"url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/1350_3.png)"})
+    $(".tile.tile-2048 .tile-inner").css({"background-image":"url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/2976_5.png)"})
+    $(".tile.tile-super .tile-inner").css({"background-image":"url(https://gamewith-en.akamaized.net/article_tools/fortnite/gacha/18_5.png)"})
   }
 </script>
 </body>
