--- a/sets/chinese/chinesesilkroad2.html
+++ b/sets/chinese/chinesesilkroad2.html
@@ -175,7 +175,7 @@
 </footer>
 
 <script>
-  GetSetCards("Chinese Silk Road part 2", cards => {
+  GetSetCards("Chinese Silk Road 2", cards => {
   var card = 0
   var side = 1
   $( ".flashcard" ).click(function() {
