--- a/extras/moreinfo.html
+++ b/extras/moreinfo.html
@@ -125,7 +125,7 @@
       <div class="carousel-item" style="background-image: url('https://source.unsplash.com/szFUQoyvrxM/1920x1080')">
         <div class="carousel-caption d-none d-md-block">
           <h2 class="display-4">Future Plans</h2>
-          <p class="lead">I intend to continue to work on this website in the future to further help improve students' education.</p>
+          <p class="lead">I intend to continue to work on this website in the future to further help improve students' learning.</p>
         </div>
       </div>
     </div>
