--- a/sets/chinese/chinesesilkroad2.html
+++ b/sets/chinese/chinesesilkroad2.html
@@ -128,11 +128,9 @@
       <!-- Free Tier -->
       <div class="col-lg-4 block-one">
         <div class="card mb-5 mb-lg-0">
-          <div class="card-body">
+          <div class="card-body important-texts">
             <h5 class="card-title text-muted text-uppercase text-center">Important Texts</h5>
             <hr>
-            <p>dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</p>
-            <button onclick="ExpandBlock('one')" class="btn btn-block btn-primary text-uppercase block-one-button">Expand</button>
           </div>
         </div>
       </div>
@@ -142,9 +140,7 @@
           <div class="card-body">
             <h5 class="card-title text-muted text-uppercase text-center">Listed Vocabulary Words</h5>
             <hr>
-            <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fas fa-circle"></i></span>Drink - Is Bad</li>
-              <li><span class="fa-li"><i class="fas fa-circle"></i></span>Food - Is Good</li>
+            <ul class="fa-ul vocab-words">
             </ul>
             <button onclick="ExpandBlock('two')" class="btn btn-block btn-primary text-uppercase block-two-button">Expand</button>
           </div>
@@ -156,10 +152,7 @@
           <div class="card-body">
             <h5 class="card-title text-muted text-uppercase text-center">Tips</h5>
             <hr>
-            <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fas fa-circle"></i></span>Dedicated Phone Support</li>
-              <li><span class="fa-li"><i class="fas fa-circle"></i></span>Unlimited Free Subdomains</li>
-              <li><span class="fa-li"><i class="fas fa-circle"></i></span>Monthly Status Reports</li>
+            <ul class="fa-ul tips">
             </ul>
             <button onclick="ExpandBlock('three')" class="btn btn-block btn-primary text-uppercase block-three-button">Expand</button>
           </div>
