--- a/sets/science/watertest.html
+++ b/sets/science/watertest.html
@@ -13,7 +13,7 @@
   </script>
   <script src="../../scripts/script.js">
   </script>
-  <script src="../../scripts/sets.js">
+  <script src="../../scripts/load.js">
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141204680-1">
@@ -36,16 +36,6 @@
 
 <body>
   <div id="loading"></div>
-  <div class="ad">
-    <div class="ad-contentt">
-      <button type="button" class="btn btn-default" onclick="hidead()">
-        <span class="glyphicon glyphicon-remove"></span>
-      </button>
-      <h1 class="ad-header">Your ad here!</h1>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/New_Logo_AD.jpg" width=300 class="ad-image">
-    </div>
-  </div>
-  <div id="hider"><img width=100% src="background.png"></div>
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
   <img class="navbar-brand" src="https://lukaja21.github.io/Quizlit/favicon-32x32.png" alt="logo">
