--- a/subjects/chinese.html
+++ b/subjects/chinese.html
@@ -13,19 +13,18 @@
   </script>
   <script src="../scripts/script.js">
   </script>
-  <script src="../scripts/sets.js">
+  <script src="../scripts/load.js">
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141204680-1">
-  </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-141204680-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-141204680-1');
-
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'UA-141204680-2');
   </script>
+
   <script>
     jQuery(document).ready(function() {
         jQuery('#loading').fadeOut(1500);
