Added feed function

--- a/games/bored.html
+++ b/games/bored.html
@@ -99,6 +99,8 @@
           <li><a href="dino.html">Dinosaur Game</a></li>
           <li><a href="2048/2048.html">Hacked 2048</a></li>
           <li><a href="cookieclicker/cookieclicker.html">Cookie Clicker</a></li>
+          <li><a href="aww.html">Random Cute Stuff</a></li>
+          <li><a href="markov.html">Talk to a robot</a></li>
         </ul>
   </div>
   
