--- a/sets/flashcard.html
+++ b/sets/flashcard.html
@@ -154,7 +154,10 @@
   </div>
 </section>
 <script>
-  var name = window.location.href.substring(44).replace("%20", " ");
+  var name = "https://quizlit.me/sets/flashcard.html?name=Chinese%20Silk%20Road%202".substring(44);
+  while (name.includes("%20")) {
+    name = name.replace("%20", " ");
+  }
   GetSetCards(name, cards => {
   var card = 0
   var side = 0
